--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="image" type=".jpg" href="https://i.pinimg.com/564x/22/e4/e0/22e4e079c332b3f3589f4a8b73545076.jpg" />
+    <link rel="icon" type="image/jpeg" href="https://i.pinimg.com/564x/22/e4/e0/22e4e079c332b3f3589f4a8b73545076.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video Tube</title>
   </head>
